# OCRProject

./: CMakeLists.txt
src/: ImagePreprocessing.cpp  ImagePreprocessing.h  main.cpp
